# private-ai-infra

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  pages.yml
agents/: README.md
agents/hermes/: HERMES_PLANNER_CONTRACT.md  README.md  __init__.py  client.py  planner.py  run.py  store.py  verify.py
agents/hermes/memory.example/: NEXT_ACTIONS.md  PROJECT_STATE.json  RUN_HISTORY.md
agents/openclaw/: OPENCLAW_ASSURANCE_CONTRACT.md  README.md  __init__.py  checks.py  client.py  evidence.py  report.py  run.py
agents/openclaw/examples/: assurance.report.txt  decisions.sample.jsonl  metrics.sample.prom
agents/opencode_sandbox/: OPENCODE_ACT_CONTRACT.md  README.md  __init__.py  act.py  apply.py  opencode.jsonc  run_review.sh
agents/opencode_sandbox/examples/: fix_sqli.proposal.json  isolated_review.report.txt
agents/opencode_sandbox/examples/review_target/: sample_handler.py
agents/prompts/: CEO_SYSTEM_PROMPT.md  HERMES_STRATEGY_BOOT_PROMPT.md  ROUTING_POLICY.md
agents/wrappers/: openclaw.sh  opencode.sh
config/: policy.example.toml
demo/: enforce.tape
deploy/nginx/: nginx.conf
docs/: GITHUB_SANITIZATION.md  architecture-diagram-plan.md  architecture.md  interview-talk-track.md  orchestration.md  portfolio-summary.md  product-evolution.md  roadmap.md  runbook.md  security-model.md  threat-model.md
evals/: README.md  __init__.py  cases.py  harness.py  report.py  run.py
evals/examples/: security-eval.report.json  security-eval.report.md
scripts/: benchmark_local_ai_stack.sh  export_public_candidate.sh  log_summary.sh  model_readiness_qwen36_no_think.sh  model_readiness_qwen36_strategy.sh  publication_readiness_scan.sh  scan_public_candidate.sh  start_local_ai_stack.sh  status_local_ai_stack.sh  stop_local_ai_stack.sh  validate_project_state.sh
site/: app.js  author.css  author.html  index.html  project.html  styles.css
src/private_ai_gateway/: __init__.py  a2a.py  app.py  audit.py  autonomy.py  cli.py  guardrails.py  metrics.py  policy.py  ratelimit.py  tools.py
tests/integration/: test_stack.sh
tests/unit/: test_a2a_tools.py  test_auth.py  test_autonomy.py  test_cli.py  test_evals.py  test_governance_endpoints.py  test_guardrails.py  test_helpers.py  test_hermes_client.py  test_hermes_planner.py  test_hermes_run.py  test_hermes_store.py  test_hermes_verify.py  test_metrics.py  test_openclaw_checks.py  test_openclaw_evidence.py  test_openclaw_report.py  test_openclaw_run.py  test_opencode_act.py  test_policy.py  test_ratelimit.py  test_sanitizer.py
