[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-ai-gateway"
version = "0.2.0"
description = "Local-first AI governance plane: an OpenAI-compatible MLX gateway with policy-as-code identity, authorization, output guardrails, and decision audit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Debsqui" }]
keywords = ["llm", "mlx", "openai-compatible", "gateway", "ai-infrastructure", "apple-silicon", "devsecops"]
dependencies = [
    "flask==3.1.3",
    "mlx==0.31.2",
    "mlx-lm==0.31.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/private_ai_gateway"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src"]
